--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <title>Loading...</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  	<link href="s/style.css" rel="stylesheet" type="text/css"/> 
-    <script type="text/javascript" src="s/swfobject.js"></script>
-    <script type="text/javascript" src="s/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="s/helperfunctions.js"></script>
-    <script type="text/javascript" src="s/player.js"></script>
-    <script type="text/javascript" src="s/playlist.js"></script>
-    <script type="text/javascript" src="s/widgets.js"></script>
+  	<link href="s/css/style.css" rel="stylesheet" type="text/css"/> 
+    <script type="text/javascript" src="s/js/swfobject.js"></script>
+    <script type="text/javascript" src="s/js/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src="s/js/helperfunctions.js"></script>
+    <script type="text/javascript" src="s/js/player.js"></script>
+    <script type="text/javascript" src="s/js/playlist.js"></script>
+    <script type="text/javascript" src="s/js/widgets.js"></script>
     <script type="text/javascript">
 	function init() {
 		Player.init(playerIsReady, playerHasError, playerStateChanged, playbackQualityChanged);
